--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+  <link rel="icon" type="image/png" href="/images/profile.png"> />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Alexandre Looten</title>
   <meta name="theme-color" content="#f0f0f0" />
