--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/images/profile.png"> />
+  <link rel="icon" type="image/png" href="/images/profile.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Alexandre Looten</title>
   <meta name="theme-color" content="#f0f0f0" />
   <script src="https://kit.fontawesome.com/6947a7c7f9.js" crossorigin="anonymous"></script>
-  <script>
+  <!-- <script>
     const setRightHeight = () => {
       var container = document.getElementById('window-main');
       var containerContent = container.querySelector('.window__content');
@@ -32,7 +32,7 @@
       window.addEventListener('resize', setRightHeight, false);
     };
 
-  </script>
+  </script> -->
 </head>
 
 <body>
